@@ -231,6 +231,7 @@
 - P4A_Thumbnail_Generator was added
 - P4A_DB::nextSequenceId now automatically creates sequences on postgreSQL too
 - P4A_DB_Source compose count query was changed a bit to support PostgreSQL syntax
+- P4A_Field does not preview images if GD are not installed
 
 2.2.4
 - rules to generate P4A_THEME_DIR and P4A_ICONS_DIR were changed
